<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".Detalle">


    <TextView
        android:id="@+id/tvTConfirmar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/texto2"
        android:textStyle="bold"
        android:text="@string/confirmarDatos"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
    >
        <TextView
            android:id="@+id/tvTNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/nombre" />
        <TextView
            android:id="@+id/tvPNombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/padding" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
        >
        <TextView
            android:id="@+id/tvTFnacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/fnacimiento" />
        <TextView
            android:id="@+id/tvPFnacimiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/padding"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
        >
        <TextView
            android:id="@+id/tvTTelefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/telefono" />

        <TextView
            android:id="@+id/tvPTelefono"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/padding"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
        >
        <TextView
            android:id="@+id/tvTEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tvPEmail"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/padding"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/padding"
        >
        <TextView
            android:id="@+id/tvTDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:text="@string/descripcion" />
        <TextView
            android:id="@+id/tvPDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/texto"
            android:paddingLeft="@dimen/padding"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:paddingTop="@dimen/padding"
            android:onClick="editarDatos"
            android:text="@string/btEditar" />
    </RelativeLayout>



</LinearLayout>